--- a/Sources/BraveWallet/Resources/sv.lproj/BraveWallet.strings
+++ b/Sources/BraveWallet/Resources/sv.lproj/BraveWallet.strings
@@ -32,10 +32,10 @@
 "wallet.activateToken" = "Aktivera %@-token";
 
 /* The description when showing no transactions inside Activity tab. */
-"wallet.activityPageEmptyDescription" = "Efter din första transaktion kommer du att kunna se den här.";
+"wallet.activityPageEmptyDescription" = "Efter en transaktion kan du se den här.";
 
 /* The title when showing no transactions inside Activity tab. */
-"wallet.activityPageEmptyTitle" = "Inga transaktioner ännu";
+"wallet.activityPageEmptyTitle" = "Inga transaktioner att visa ännu";
 
 /* The title of the tab that will display user's transaction activity for all accounts. */
 "wallet.activityPageTitle" = "Aktivitet";
@@ -401,7 +401,7 @@
 "wallet.customTokenNetworkHeader" = "Välj nätverk";
 
 /* The title displayed on the add custom token screen */
-"wallet.customTokenTitle" = "Anpassad";
+"wallet.customTokenTitle" = "Lägg till anpassad tillgång";
 
 /* The title of the notification which will prompt at the top of the browser when users are visiting web3 site that is not yet connected with Brave Wallet. The '%@' will be the site attempting to connect. For example: \"app.uniswap.org wants to interact with Brave Wallet\" */
 "wallet.dappsConnectionNotificationOriginTitle" = "%@ vill interagera med Brave Wallet";
@@ -891,6 +891,24 @@
 
 /* The title an entry that will be displayed in NFT detail. This entry to display this NFT's token standard */
 "wallet.nftDetailTokenStandard" = "Tokenstandard";
+
+/* The title of the alert that asks users either to enable NFT discovery or import manually. `SimpleHash` is the third-party service name, so it does not need to be translated. */
+"wallet.nftDiscoveryCalloutDescription" = "Brave Wallet kan använda en tredjepartstjänst för att automatiskt visa dina NFT:er. Brave kommer att dela dina plånboksadresser med SimpleHash för att tillhandahålla denna tjänst. Läs mer.";
+
+/* This is the same `Learn more` at the end of `nftDiscoveryCalloutDescription`, but we need a separat translation to detect the range of it in order to build some attributed strings. */
+"wallet.nftDiscoveryCalloutDescriptionLearnMore" = "Läs mer";
+
+/* The title of the button that user clicks to disable NFT discovery. */
+"wallet.nftDiscoveryCalloutDisable" = "Nej tack, jag gör det manuellt";
+
+/* The title of the button that user clicks to enable NFT discovery. */
+"wallet.nftDiscoveryCalloutEnable" = "Ja, fortsätt";
+
+/* The title of the alert that asks users either to enable NFT discovery or import manually. */
+"wallet.nftDiscoveryCalloutTitle" = "Vill du att NFT:er ska visas automatiskt?";
+
+/* The title of the button that user clicks to add his/her first NFT */
+"wallet.nftEmptyImportNFT" = "Importera NFT";
 
 /* Description of the NFT Gateway setting */
 "wallet.nftGatewayLongDescription" = "En giltig IPFS-gateway ska anges. Tillhandahållen gateway kommer att kontrolleras för möjligheten att läsa in IPFS-resurser.";
@@ -1707,6 +1725,12 @@
 
 /* The section title for users to set up preferences for interation with web3 sites. */
 "wallet.web3PreferencesSectionTitle" = "Web3-inställningar";
+
+/* The title of the toggle for user to enable/disable NFT discovery inside Web3 settings. */
+"wallet.web3SettingsEnableNFTDiscovery" = "Aktivera NFT-upptäckt";
+
+/* The footer of the toggle for user to enable/disable NFT discovery inside Web3 settings. */
+"wallet.web3SettingsEnableNFTDiscoveryFooter" = "Lägg automatiskt till NFT:er som du äger i plånboken med hjälp av tredjeparts-API:er.  [Läs mer](%@)";
 
 /* Description of the wrong IPFS gateway alert */
 "wallet.wrongGatewayAlertDescription" = "Ogiltig url angavs. Gateway ska kunna lösa IPFS-resurser.";
