--- a/Sources/BraveWallet/Resources/tr.lproj/BraveWallet.strings
+++ b/Sources/BraveWallet/Resources/tr.lproj/BraveWallet.strings
@@ -32,10 +32,10 @@
 "wallet.activateToken" = "%@ Token'ını Etkinleştir";
 
 /* The description when showing no transactions inside Activity tab. */
-"wallet.activityPageEmptyDescription" = "İlk işleminizden sonra buradan görebilirsiniz.";
+"wallet.activityPageEmptyDescription" = "Bir işlem yaptıktan sonra, buradan görebilirsiniz.";
 
 /* The title when showing no transactions inside Activity tab. */
-"wallet.activityPageEmptyTitle" = "Henüz işlem yok";
+"wallet.activityPageEmptyTitle" = "Henüz görüntülenecek işlem yok";
 
 /* The title of the tab that will display user's transaction activity for all accounts. */
 "wallet.activityPageTitle" = "Eylem";
@@ -401,7 +401,7 @@
 "wallet.customTokenNetworkHeader" = "Ağ seç";
 
 /* The title displayed on the add custom token screen */
-"wallet.customTokenTitle" = "Özel";
+"wallet.customTokenTitle" = "Özel Varlık Ekle";
 
 /* The title of the notification which will prompt at the top of the browser when users are visiting web3 site that is not yet connected with Brave Wallet. The '%@' will be the site attempting to connect. For example: \"app.uniswap.org wants to interact with Brave Wallet\" */
 "wallet.dappsConnectionNotificationOriginTitle" = "%@, Brave Cüzdanı ile etkileşime girmek istiyor";
@@ -891,6 +891,24 @@
 
 /* The title an entry that will be displayed in NFT detail. This entry to display this NFT's token standard */
 "wallet.nftDetailTokenStandard" = "Token standardı";
+
+/* The title of the alert that asks users either to enable NFT discovery or import manually. `SimpleHash` is the third-party service name, so it does not need to be translated. */
+"wallet.nftDiscoveryCalloutDescription" = "Brave Cüzdan, NFT'lerinizi otomatik olarak görüntülemek için üçüncü taraf bir hizmet kullanabilir. Brave, bu hizmeti sağlamak için cüzdan adreslerinizi SimpleHash ile paylaşacaktır. Daha fazla bilgi alın.";
+
+/* This is the same `Learn more` at the end of `nftDiscoveryCalloutDescription`, but we need a separat translation to detect the range of it in order to build some attributed strings. */
+"wallet.nftDiscoveryCalloutDescriptionLearnMore" = "Daha fazla bilgi edinin";
+
+/* The title of the button that user clicks to disable NFT discovery. */
+"wallet.nftDiscoveryCalloutDisable" = "Hayır teşekkürler, manuel olarak yaparım";
+
+/* The title of the button that user clicks to enable NFT discovery. */
+"wallet.nftDiscoveryCalloutEnable" = "Evet, devam et";
+
+/* The title of the alert that asks users either to enable NFT discovery or import manually. */
+"wallet.nftDiscoveryCalloutTitle" = "NFT'leriniz otomatik olarak görüntülensin mi?";
+
+/* The title of the button that user clicks to add his/her first NFT */
+"wallet.nftEmptyImportNFT" = "NFT'yi içe aktar";
 
 /* Description of the NFT Gateway setting */
 "wallet.nftGatewayLongDescription" = "Geçerli IPFS ağ geçidi sağlanmalıdır. Sağlanan ağ geçidinin IPFS kaynaklarını yükleme özelliği kontrol edilecektir.";
@@ -1707,6 +1725,12 @@
 
 /* The section title for users to set up preferences for interation with web3 sites. */
 "wallet.web3PreferencesSectionTitle" = "Web3 tercihleri";
+
+/* The title of the toggle for user to enable/disable NFT discovery inside Web3 settings. */
+"wallet.web3SettingsEnableNFTDiscovery" = "NFT Keşfini Etkinleştir";
+
+/* The footer of the toggle for user to enable/disable NFT discovery inside Web3 settings. */
+"wallet.web3SettingsEnableNFTDiscoveryFooter" = "Üçüncü taraf API'leri kullanarak otomatik olarak sahip olduğunuz NFT'leri Cüzdanınıza ekleyin. [Daha fazla bilgi](%@)";
 
 /* Description of the wrong IPFS gateway alert */
 "wallet.wrongGatewayAlertDescription" = "Geçersiz url sağlandı. Ağ geçidinin, IPFS kaynaklarını çözebilmesi gerekir.";
