--- a/Sources/BraveWallet/Resources/ru.lproj/BraveWallet.strings
+++ b/Sources/BraveWallet/Resources/ru.lproj/BraveWallet.strings
@@ -32,10 +32,10 @@
 "wallet.activateToken" = "Активировать токен %@";
 
 /* The description when showing no transactions inside Activity tab. */
-"wallet.activityPageEmptyDescription" = "Как только вы совершите первую транзакцию, она появится здесь.";
+"wallet.activityPageEmptyDescription" = "Когда вы совершите транзакцию, она появится здесь.";
 
 /* The title when showing no transactions inside Activity tab. */
-"wallet.activityPageEmptyTitle" = "Транзакций нет";
+"wallet.activityPageEmptyTitle" = "Пока транзакций нет";
 
 /* The title of the tab that will display user's transaction activity for all accounts. */
 "wallet.activityPageTitle" = "Действия";
@@ -401,7 +401,7 @@
 "wallet.customTokenNetworkHeader" = "Выбор сети";
 
 /* The title displayed on the add custom token screen */
-"wallet.customTokenTitle" = "Пользовательский";
+"wallet.customTokenTitle" = "Добавление пользовательского актива";
 
 /* The title of the notification which will prompt at the top of the browser when users are visiting web3 site that is not yet connected with Brave Wallet. The '%@' will be the site attempting to connect. For example: \"app.uniswap.org wants to interact with Brave Wallet\" */
 "wallet.dappsConnectionNotificationOriginTitle" = "%@ запрашивает доступ к Brave Кошельку";
@@ -891,6 +891,24 @@
 
 /* The title an entry that will be displayed in NFT detail. This entry to display this NFT's token standard */
 "wallet.nftDetailTokenStandard" = "Стандарт токена";
+
+/* The title of the alert that asks users either to enable NFT discovery or import manually. `SimpleHash` is the third-party service name, so it does not need to be translated. */
+"wallet.nftDiscoveryCalloutDescription" = "Brave Кошелек может использовать сторонний сервис и автоматически показывать NFT. Для этого Brave будет делиться адресами ваших кошельков с SimpleHash. Подробнее";
+
+/* This is the same `Learn more` at the end of `nftDiscoveryCalloutDescription`, but we need a separat translation to detect the range of it in order to build some attributed strings. */
+"wallet.nftDiscoveryCalloutDescriptionLearnMore" = "Подробнее";
+
+/* The title of the button that user clicks to disable NFT discovery. */
+"wallet.nftDiscoveryCalloutDisable" = "Нет";
+
+/* The title of the button that user clicks to enable NFT discovery. */
+"wallet.nftDiscoveryCalloutEnable" = "Да";
+
+/* The title of the alert that asks users either to enable NFT discovery or import manually. */
+"wallet.nftDiscoveryCalloutTitle" = "Хотите, чтобы NFT-токены отображались автоматически?";
+
+/* The title of the button that user clicks to add his/her first NFT */
+"wallet.nftEmptyImportNFT" = "Импортировать NFT";
 
 /* Description of the NFT Gateway setting */
 "wallet.nftGatewayLongDescription" = "Укажите действительный шлюз IPFS. Мы проверим, можно ли через него загружать IPFS-ресурсы.";
@@ -1707,6 +1725,12 @@
 
 /* The section title for users to set up preferences for interation with web3 sites. */
 "wallet.web3PreferencesSectionTitle" = "Настройки Web3";
+
+/* The title of the toggle for user to enable/disable NFT discovery inside Web3 settings. */
+"wallet.web3SettingsEnableNFTDiscovery" = "Включить обнаружение NFT";
+
+/* The footer of the toggle for user to enable/disable NFT discovery inside Web3 settings. */
+"wallet.web3SettingsEnableNFTDiscoveryFooter" = "Автоматически добавляет NFT, которыми вы владеете, в кошелек, используя сторонние API. [Подробнее](%@)";
 
 /* Description of the wrong IPFS gateway alert */
 "wallet.wrongGatewayAlertDescription" = "Предоставлен некорректный URL-адрес. Шлюз должен быть совместимым с протоколом IPFS.";
