--- a/Sources/BraveWallet/Resources/uk.lproj/BraveWallet.strings
+++ b/Sources/BraveWallet/Resources/uk.lproj/BraveWallet.strings
@@ -32,7 +32,7 @@
 "wallet.activateToken" = "Активувати токен %@";
 
 /* The description when showing no transactions inside Activity tab. */
-"wallet.activityPageEmptyDescription" = "Коли ви виконаєте першу транзакцію, її можна буде переглянути тут.";
+"wallet.activityPageEmptyDescription" = "Коли ви виконаєте транзакцію, її можна буде переглянути тут.";
 
 /* The title when showing no transactions inside Activity tab. */
 "wallet.activityPageEmptyTitle" = "Транзакцій наразі немає";
@@ -401,7 +401,7 @@
 "wallet.customTokenNetworkHeader" = "Вибрати мережу";
 
 /* The title displayed on the add custom token screen */
-"wallet.customTokenTitle" = "Користувацькі";
+"wallet.customTokenTitle" = "Додати користувацький актив";
 
 /* The title of the notification which will prompt at the top of the browser when users are visiting web3 site that is not yet connected with Brave Wallet. The '%@' will be the site attempting to connect. For example: \"app.uniswap.org wants to interact with Brave Wallet\" */
 "wallet.dappsConnectionNotificationOriginTitle" = "Користувач %@ хоче взаємодіяти з гаманцем Brave";
@@ -891,6 +891,24 @@
 
 /* The title an entry that will be displayed in NFT detail. This entry to display this NFT's token standard */
 "wallet.nftDetailTokenStandard" = "Стандарт токена";
+
+/* The title of the alert that asks users either to enable NFT discovery or import manually. `SimpleHash` is the third-party service name, so it does not need to be translated. */
+"wallet.nftDiscoveryCalloutDescription" = "Brave Wallet може використовувати сторонні сервіси для автоматичного відображення ваших NFT. Brave розкриє адреси ваших гаманців сервісу SimpleHash, щоб він працював. Детальніше.";
+
+/* This is the same `Learn more` at the end of `nftDiscoveryCalloutDescription`, but we need a separat translation to detect the range of it in order to build some attributed strings. */
+"wallet.nftDiscoveryCalloutDescriptionLearnMore" = "Докладніше";
+
+/* The title of the button that user clicks to disable NFT discovery. */
+"wallet.nftDiscoveryCalloutDisable" = "Ні, дякую. Я зроблю це вручну.";
+
+/* The title of the button that user clicks to enable NFT discovery. */
+"wallet.nftDiscoveryCalloutEnable" = "Так, продовжити";
+
+/* The title of the alert that asks users either to enable NFT discovery or import manually. */
+"wallet.nftDiscoveryCalloutTitle" = "Хочете, щоб ваші NFT відображалися автоматично?";
+
+/* The title of the button that user clicks to add his/her first NFT */
+"wallet.nftEmptyImportNFT" = "Імпортувати NFT";
 
 /* Description of the NFT Gateway setting */
 "wallet.nftGatewayLongDescription" = "Потрібно надати дійсний IPFS-шлюз. Наданий шлюз буде перевірено на можливість завантаження ресурсів IPFS.";
@@ -1707,6 +1725,12 @@
 
 /* The section title for users to set up preferences for interation with web3 sites. */
 "wallet.web3PreferencesSectionTitle" = "Параметри Web3";
+
+/* The title of the toggle for user to enable/disable NFT discovery inside Web3 settings. */
+"wallet.web3SettingsEnableNFTDiscovery" = "Увімкнути знаходження NFT";
+
+/* The footer of the toggle for user to enable/disable NFT discovery inside Web3 settings. */
+"wallet.web3SettingsEnableNFTDiscoveryFooter" = "Автоматично додавайте NFT, якими ви володієте, у гаманець, використовуючи сторонні API. [Докладніше](%@)";
 
 /* Description of the wrong IPFS gateway alert */
 "wallet.wrongGatewayAlertDescription" = "Надано недійсну URL-адресу. Шлюз повинен вирішувати ресурси IPFS.";
