--- a/ios/brave-ios/Sources/BraveShields/Resources/zh.lproj/BraveShared.strings
+++ b/ios/brave-ios/Sources/BraveShields/Resources/zh.lproj/BraveShared.strings
@@ -1,11 +1,11 @@
 /* A description of a section in a list that allows you to add custom filter lists found in the footer of the add custom url screen */
-"AddCustomFilterListDescription" = "新增由您信任的社群所建立及維護的額外清單。";
+"AddCustomFilterListDescription" = "新增由您信任的社群所建立及维护的额外清单。";
 
 /* Warning text found in the footer of the add custom filter list url screen. */
 "AddCustomFilterListWarning" = "**仅订阅来自您信任的实体的列表**。您的浏览器将定期检查您输入的网址的列表更新。";
 
 /* A title within a cell where a user can navigate to an add screen. */
-"AddFilterByURL" = "透過 URL 新增篩選條件";
+"AddFilterByURL" = "透过 URL 新增筛选条件";
 
 /* A discription of the Brave Player. */
 "AntiAdBlockWarningBravePlayerDescription" = "**Brave Player** 是您获得无广告、不间断视频体验的入场券。";
@@ -59,7 +59,7 @@
 "BravePlayerInfoTitle" = "改为在 Brave Player 中观看";
 
 /* A title to the content filtering page under global shield settings and the title on the Content filtering page */
-"ContentFiltering" = "內容過濾";
+"ContentFiltering" = "內容过滤";
 
 /* A description of the content filtering page. */
 "ContentFilteringDescription" = "启用自定义过滤器来屏蔽特定区域和语言的追踪器和烦人的内容。";
@@ -71,19 +71,19 @@
 "CustomFilterListsURL" = "输入过滤器列表网址";
 
 /* A title for a section that allows a user to insert custom filter list text */
-"CustomFilters" = "自訂過濾器";
+"CustomFilters" = "自定过滤器";
 
 /* A description of the custom filters section */
-"CustomFiltersDescription" = "在此新增自訂篩選條件。請確保使用 Adblock 篩選條件語法。";
+"CustomFiltersDescription" = "在此新增自定筛选条件。请确保使用 Adblock 筛选条件语法。";
 
 /* An error message telling the user that a rule is invalid */
-"CustomFiltersInvalidRuleError" = "行 %2$i 的規則「%1$@」無效";
+"CustomFiltersInvalidRuleError" = "行 %2$i 的规则「%1$@」无效";
 
 /* A placeholder when custom filter lists are empty */
-"CustomFiltersPlaceholder" = "在此新增您的自訂篩選條件，每行一個。";
+"CustomFiltersPlaceholder" = "在此新增您的自定筛选条件，每行一个。";
 
 /* An error message telling the user that they crossed the line limit */
-"CustomFiltersTooManyLinesError" = "自訂篩選條件最多支援 %i 行";
+"CustomFiltersTooManyLinesError" = "自定筛选条件最多支援 %i 行";
 
 /* A section title that contains default (predefined) filter lists a user can enable/diable. */
 "DefaultFilterLists" = "默认筛选器列表";
@@ -113,7 +113,7 @@
 "EnableGPCLabel" = "启用全局隐私控制";
 
 /* A title for a section that contains all external filter lists */
-"ExternalFilterLists" = "外部篩選清單";
+"ExternalFilterLists" = "外部筛选清单";
 
 /* This is an error message when a user tries to enter an invalid URL into the custom filter list URL text field. */
 "FilterListAddInvalidURLError" = "输入的网址无效";
@@ -125,10 +125,10 @@
 "FilterListsAdd" = "添加";
 
 /* A description on the content filtering screen for the filter lists section. */
-"FilterListsDescription" = "其他熱門社群清單。請注意，啟用太多過濾器可能會導致瀏覽速度變慢。";
+"FilterListsDescription" = "其他热门社群清单。请注意，启用太多过滤器可能会导致浏览器速度变慢。";
 
 /* This is a generic error message when downloading a filter list fails. */
-"FilterListsDownloadFailed" = "下載失敗";
+"FilterListsDownloadFailed" = "下載失败";
 
 /* If a filter list is not yet downloaded this label shows up instead of a last download date, signifying that the download is still pending. */
 "FilterListsDownloadPending" = "等待下载";
@@ -137,7 +137,7 @@
 "FilterListsEdit" = "编辑";
 
 /* This is a placeholder for an input field that takes a custom filter list URL. */
-"FilterListsEnterFilterListURL" = "輸入過濾器清單 URL";
+"FilterListsEnterFilterListURL" = "輸入过滤器清单 URL";
 
 /* A label that shows when the filter list was last updated. Do not translate the '%@' placeholder. The %@ will be replaced with a relative date. For example, '5 minutes ago' or '1 hour ago'. So the full string will read something like 'Last updated 5 minutes ago'. */
 "FilterListsLastUpdatedLabel" = "上次更新时间 %@";
@@ -146,13 +146,13 @@
 "FilterListURLTextFieldPlaceholder" = "在此处输入筛选器清单网址";
 
 /* The option the user can select to do strict https upgrading */
-"HttpsUpgradeLevelStrict" = "嚴格";
+"HttpsUpgradeLevelStrict" = "严格";
 
 /* A page title for the warning page that appears when http was blocked */
-"SiteIsNotSecure" = "網站不安全";
+"SiteIsNotSecure" = "网站不安全";
 
 /* A page title for the warning page that appears when http was blocked */
-"TheConnectionIsNotSecure" = "您與 %@ 之間的連線不安全";
+"TheConnectionIsNotSecure" = "您与 %@ 之间的连线不安全";
 
 /* A label for a shield option that allows you to switch between different blocking levels for tracker and ads blocking. Options include disabled, standard and aggressive. */
 "TrackersAndAdsBlocking" = "跟踪器和广告屏蔽";
@@ -161,5 +161,5 @@
 "UpgradeConnectionsToHTTPS" = "将连接升级为 HTTPS";
 
 /* A description shown an a page where the http page was blocked */
-"YourConnectionIsNotPrivate" = "您會看到這項警告，是因為此網站不支援 HTTPS。";
+"YourConnectionIsNotPrivate" = "您会看到这项警告，是因为此网站不支援 HTTPS。";
 
