--- a/ios/brave-ios/Sources/BraveWallet/Resources/zh.lproj/BraveWallet.strings
+++ b/ios/brave-ios/Sources/BraveWallet/Resources/zh.lproj/BraveWallet.strings
@@ -11,7 +11,7 @@
 "wallet.accountDetailsTitle" = "账户详细信息";
 
 /* The error shown below the account name field when adding or renaming a wallet account if the length is longer than max characters. '%lld' refers to a number (for example \"Account name must be at 30 characters or less\") */
-"wallet.accountNameLengthError" = "帳戶名稱的長度不得超過 %lld 個字元";
+"wallet.accountNameLengthError" = "账户名称的长度不得超过 %lld 個字元";
 
 /* A button title for displaying their accounts private key */
 "wallet.accountPrivateKey" = "隐私密钥";
@@ -230,7 +230,7 @@
 "wallet.biometricsSetupTouchId" = "Touch ID";
 
 /* The label displayed in Add Account above the private key box when adding or importing a Bitcoin account. The '%@' is the standard supported for the selected network (for example \"Only zprv extended keys are supported.\") */
-"wallet.bitcoinImportExtendedKeyWarning" = "僅支援 %@ 延伸金鑰。";
+"wallet.bitcoinImportExtendedKeyWarning" = "仅支援 %@ 延伸金钥。";
 
 /* The title for Brave Fee label in Swap. The fee percentage is displayed beside the label. */
 "wallet.braveFeeLabel" = "Brave 费用： %@";
@@ -575,10 +575,10 @@
 "wallet.decryptRequestTitle" = "解密请求";
 
 /* The default account name when adding an account and not entering a custom name. '%@' refers to a coin type and '%lld' refers to a number (for example \"Ethereum Account 2\") */
-"wallet.defaultAccountName" = "%1$@ 帳戶 %2$lld";
+"wallet.defaultAccountName" = "%1$@ 账户 %2$lld";
 
 /* The default account name when adding an account and not entering a custom name. '%@' refers to a coin type and '%lld' refers to a number (for example \"Filecoin Testnet Account 2\") */
-"wallet.defaultTestnetAccountName" = "%1$@ 測試網帳戶 %2$lld";
+"wallet.defaultTestnetAccountName" = "%1$@ 测试网账户 %2$lld";
 
 /* The title of the option inside the context menu for custom asset row in edit user asset screen. Or the title of the option inside the context menu for custom network row which is not being currently selected in networks list screen. */
 "wallet.delete" = "删除";
@@ -890,7 +890,7 @@
 "wallet.inputDataPlaceholderSolana" = "功能类型：%d";
 
 /* The label displayed in details for Bitcoin Transaction Confirmation details panel beside/above the Input index. */
-"wallet.inputLabel" = "輸入";
+"wallet.inputLabel" = "输入";
 
 /* An error message when there is no insufficient balance for swapping. It will be displayed as the title of the disabled swap button at the bottom in the Swap Screen. */
 "wallet.insufficientBalance" = "余额不足";
@@ -1178,7 +1178,7 @@
 "wallet.otherWalletActionsAccessibilityTitle" = "其他钱包操作";
 
 /* The label displayed in details for Bitcoin Transaction Confirmation details panel beside/above the Output index. */
-"wallet.outputLabel" = "輸出";
+"wallet.outputLabel" = "输出";
 
 /* The error message displayed when a user enters a password that does not meet the requirements */
 "wallet.passwordDoesNotMeetRequirementsError" = "密码长度至少为 8 个字符。";
@@ -1439,7 +1439,7 @@
 "wallet.sent" = "已发送";
 
 /* One of the context menu option for user to tap to set a default network in wallet settings. */
-"wallet.setDefaultNetwork" = "設為預設";
+"wallet.setDefaultNetwork" = "设为预设";
 
 /* Title of the set IPFS gateway button */
 "wallet.setGatewayButtonTitle" = "設定";
@@ -2030,7 +2030,7 @@
 "wallet.userAssetSymbolNetwork" = "%2$@上的 %1$@";
 
 /* The label displayed in details for Bitcoin Transaction Confirmation details panel beside/above the value. */
-"wallet.valueLabel" = "價值";
+"wallet.valueLabel" = "价值";
 
 /* The error message when input phrase does not match the correct one. */
 "wallet.verifyRecoveryPhraseError" = "复原密语不相符";
