--- a/ios/brave-ios/Sources/BraveStrings/Resources/zh.lproj/Localizable.strings
+++ b/ios/brave-ios/Sources/BraveStrings/Resources/zh.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "OpenSelectedTabFromTabTrayKeyCodeTitle" = "打开选定的标签";
 
 /* Title label text for refreshing credentials from brave site. */
-"paywall.alreadyPurchasedTitle" = "已在 brave.com 上都买吗？";
+"paywall.alreadyPurchasedTitle" = "已在 brave.com 上购买吗？";
 
 /* Button action text for refreshing credentials from brave site. */
 "paywall.refreshCredentialsButtonTitle" = "重新整理您的凭证";
